fix: Set left alignment for title in +768

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -32,4 +32,8 @@
     .title-container {
         grid-column: 1/3;
     }
+
+    .title {
+        text-align: left;
+    }
 }
